--- a/student-client/package.json
+++ b/student-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teacher-server",
+  "name": "student-client",
   "version": "1.0.0",
   "description": "",
   "main": "/application/index.html",
