--- a/teacher-server/package.json
+++ b/teacher-server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Sylicium",
   "license": "ISC",
   "window": {
     "permissions": [
@@ -14,10 +14,13 @@
     "position": "center",
     "icon": "/application/LaboFacticeLogo.ico"
   },
-  "description": "",
   "dependencies": {
+    "axios": "^1.4.0",
+    "bonjour": "^3.5.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
-    "socket.io": "^4.6.1"
-  }
+    "socket.io": "^4.6.2"
+  },
+  "description": ""
 }
