--- a/student-client/package.json
+++ b/student-client/package.json
@@ -1,12 +1,11 @@
 {
   "name": "student-client",
   "version": "1.0.0",
-  "description": "",
   "main": "/application/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Sylicium",
   "license": "ISC",
   "window": {
     "permissions": [
@@ -14,5 +13,13 @@
     ],
     "position": "center",
     "icon": "/application/LaboFacticeLogo.ico"
+  },
+  "description": "",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "bonjour": "^3.5.0",
+    "child_process": "^1.0.2",
+    "fs": "^0.0.1-security",
+    "socket.io-client": "^4.6.2"
   }
 }
