Working on teacher front

--- a/teacher-server/application/config.json
+++ b/teacher-server/application/config.json
@@ -8,5 +8,12 @@
         "name": "LaboFacticeLan",
         "port": 7890,
         "type": "LaboFacticeLanServiceName"
-    }
+    },
+    "classPlaces": [
+        {
+            "id": 1,
+            "x": 0,
+            "y": 0
+        }
+    ]
 }
