--- a/student-client/package.json
+++ b/student-client/package.json
@@ -14,7 +14,6 @@
     "position": "center",
     "icon": "/application/LaboFacticeLogo.ico"
   },
-  "description": "",
   "dependencies": {
     "axios": "^1.4.0",
     "bonjour": "^3.5.0",
@@ -22,5 +21,6 @@
     "fs": "^0.0.1-security",
     "os": "^0.1.2",
     "socket.io-client": "^4.6.2"
-  }
+  },
+  "description": ""
 }
