Improvements on teacher app

--- a/teacher-server/application/config.json
+++ b/teacher-server/application/config.json
@@ -12,9 +12,9 @@
     "classPlaces": [
         {
             "number": 1,
-            "computerName": "pcQuentinMarie",
-            "top": 429,
-            "left": 28
+            "computerName": "PC-PHYSIQUE-21",
+            "top": 486,
+            "left": 27
         }
     ]
 }
