--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bonjour": "^3.5.0",
     "fs": "^0.0.1-security",
     "socket.io": "^4.6.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "winresourcer": "^0.9.0"
   }
 }
