--- a/teacher-server/package.json
+++ b/teacher-server/package.json
@@ -12,7 +12,7 @@
       "audio"
     ],
     "position": "center",
-    "icon": "/application/LaboFacticeLogo.ico"
+    "icon": "./application/LaboFacticeLogo.png"
   },
   "dependencies": {
     "axios": "^1.4.0",
