--- a/student-client/package.json
+++ b/student-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "student-client",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "/application/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,10 @@
       "audio"
     ],
     "position": "center",
-    "icon": "/application/LaboFacticeLogo.ico"
+    "icon": "./application/LaboFacticeLogo.png"
+  },
+  "icons": {
+    "256": "./application/LaboFacticeLogo.png"
   },
   "dependencies": {
     "axios": "^1.4.0",
